--- a/index.html
+++ b/index.html
@@ -4,8 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cakes</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,700" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>hello</p>
+    <div class="block">
+        <div class="block__container">
+            <h2 class="block__title title">Для любых событий и дорогих вам людей </h2>
+            <div class="block__body cards">
+                <div class="cards__item item-card">
+                    <div class="item-card__image">
+                        <img class="image" src="img/img.png" alt="">
+                    </div>
+                    <div class="item-card__body">
+                        <h3 class="item-card__name">Кремовый замок</h3>
+                    <p class="item-card__description">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </p>
+                    <p class="item-card__price">150 <span>₽/шт.</span></p>
+                    <div class="item-card__button">
+                        <button class=" btn btn--small">Заказать</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="cards__item item-card">
+                    <div class="item-card__image">
+                        <img class="image" src="img/img.png" alt="">
+                    </div>
+                    <div class="item-card__body">
+                        <h3 class="item-card__name">Кремовый замок</h3>
+                        <p class="item-card__description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, numquam dolore! Veniam rerum eaque qui voluptatum at earum ex quibusdam.
+                        </p>
+                        <p class="item-card__price">150 <span>₽/шт.</span></p>
+                        <div class="item-card__button">
+                            <button class=" btn btn--small">Заказать</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards__item item-card">
+                    <div class="item-card__image">
+                        <img class="image" src="https://sun1-99.userapi.com/s/v1/if2/0RY0l0ZceSvjJ_ivK4FBCzT53XnjkoFaFDX60c47zw2vF2FGrugtEdJB1iRa_j3X6TmRk7uILq1w-D_zQ0myCqtl.jpg?size=200x200&quality=96&crop=141,56,296,296&ava=1" alt="">
+                    </div>
+                    <div class="item-card__body">
+                        <h3 class="item-card__name">Кремовый замок</h3>
+                    <p class="item-card__description">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </p>
+                    <p class="item-card__price">150 <span>₽/шт.</span></p>
+                    <div class="item-card__button">
+                        <button class=" btn btn--small">Заказать</button>
+                    </div>
+                    </div>
+                </div>
+                <div class="cards__item item-card">
+                    <div class="item-card__image">
+                        <img class="image" src="https://avatars.mds.yandex.net/i?id=6d9562a6a198ec8d52f654b9775639f9c98af374-10386268-images-thumbs&n=13" alt="">
+                    </div>
+                    <div class="item-card__body">
+                        <h3 class="item-card__name">Кремовый замок</h3>
+                    <p class="item-card__description">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </p>
+                    <p class="item-card__price">150 <span>₽/шт.</span></p>
+                    <div class="item-card__button">
+                        <button class=" btn btn--small">Заказать</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
