--- a/index.html
+++ b/index.html
@@ -16,11 +16,40 @@
             <div class="header__container header-body">
                 <div class="header-body__name">Сладкий сундук</div>
                 <div class="header-body__contacts contacts-header">
-                    <div class="contacts-header__adress">г. Санкт Петербург, ул. Куйбышева 31</div>
-                    <div class="contacts-header__contact contact-header">
-                        <p class="contact-header__phone">8 (812) 844-95-49</p>
-                        <p class="contact-header__times">Ежедневно с 9:00 до 20:00</p>
-                    </div>
+                    <a href="#" class="contacts-header__adress adress-block">
+                        <svg class="adress-block__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17.000000" height="23.000000" viewBox="0 0 17 23" fill="none">
+                            <defs>
+                                <clipPath id="clip0_421">
+                                    <rect id="Icon" rx="0.000000" width="16.000000" height="16.000000" transform="matrix(-1 0 0 1 17.5 3.5)" fill="white" fill-opacity="0"/>
+                                </clipPath>
+                                <clipPath id="clip0_420">
+                                    <rect id="icon" rx="0.000000" width="16.000000" height="22.000000" transform="translate(0.500000 0.500000)" fill="white" fill-opacity="0"/>
+                                </clipPath>
+                            </defs>
+                            <g clip-path="url(#clip0_420)">
+                                <rect id="Icon" rx="0.000000" width="16.000000" height="16.000000" transform="matrix(-1 0 0 1 17.5 3.5)" fill="#FFFFFF" fill-opacity="0"/>
+                                <g clip-path="url(#clip0_421)">
+                                    <path d="M14.07 7.23C14.01 7 13.89 6.76 13.8 6.55C12.71 3.93 10.34 3 8.42 3C5.85 3 3.02 4.72 2.64 8.27L2.64 8.99C2.64 9.02 2.65 9.3 2.66 9.43C2.88 11.12 4.21 12.92 5.21 14.62C6.28 16.43 7.4 18.21 8.5 20C9.18 18.83 9.86 17.65 10.52 16.52C10.7 16.19 10.91 15.85 11.09 15.54C11.21 15.33 11.45 15.11 11.55 14.92C12.62 12.95 14.35 10.97 14.35 9.02L14.35 8.22C14.35 8.01 14.09 7.27 14.07 7.23ZM8.46 10.87C7.71 10.87 6.88 10.49 6.47 9.45C6.41 9.28 6.42 8.95 6.42 8.92L6.42 8.45C6.42 7.12 7.55 6.52 8.53 6.52C9.74 6.52 10.67 7.48 10.67 8.69C10.67 9.9 9.67 10.87 8.46 10.87Z" fill="#FFFFFF" fill-opacity="1.000000" fill-rule="nonzero"/>
+                                </g>
+                            </g>
+                        </svg>
+                        <p class="adress-block__text">
+                            г. Санкт Петербург,<br> 
+                            ул. Куйбышева 31
+                        </p>
+                    </a>
+                        
+                        
+                    <a href="tel:+00000000000" class="contacts-header__contact header-contact">
+
+                        <svg class="header-contact__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19.000488" height="19.000000" viewBox="0 0 19.0005 19" fill="none">
+                            <path id="Vector" d="M9.8 0C12.15 0.32 14.28 1.39 15.97 3.07C17.56 4.67 18.61 6.69 19 8.91L17.54 9.16C17.21 7.24 16.3 5.5 14.92 4.12C13.47 2.67 11.63 1.75 9.59 1.46L9.8 0ZM14.44 12.56C13.82 11.95 13.04 11.95 12.43 12.56C11.96 13.03 11.49 13.5 11.02 13.97C10.9 14.1 10.79 14.13 10.64 14.04C10.33 13.88 10.01 13.74 9.72 13.56C8.35 12.7 7.21 11.6 6.2 10.36C5.69 9.74 5.25 9.08 4.94 8.34C4.87 8.19 4.88 8.09 5.01 7.97C5.48 7.51 5.94 7.04 6.4 6.58C7.04 5.93 7.04 5.17 6.39 4.52C6.03 4.15 5.66 3.78 5.29 3.41C4.91 3.03 4.54 2.65 4.15 2.27C3.53 1.67 2.76 1.67 2.14 2.28C1.67 2.74 1.21 3.22 0.73 3.68C0.28 4.1 0.06 4.62 0.01 5.22C-0.07 6.21 0.17 7.14 0.51 8.04C1.21 9.92 2.27 11.58 3.56 13.11C5.29 15.17 7.36 16.81 9.79 17.98C10.88 18.51 12.01 18.92 13.24 18.99C14.08 19.04 14.82 18.82 15.41 18.16C15.81 17.71 16.27 17.3 16.69 16.87C17.33 16.23 17.33 15.45 16.7 14.82C15.95 14.07 15.2 13.31 14.44 12.56ZM13.69 9.41L15.14 9.16C14.92 7.82 14.28 6.61 13.32 5.65C12.31 4.63 11.02 3.99 9.61 3.79L9.4 5.26C10.49 5.41 11.49 5.91 12.28 6.69C13.02 7.44 13.51 8.38 13.69 9.41Z" fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd"/>
+                        </svg>
+                        <div class="header-contact__text">
+                            <p class="header-contact__phone">8 (812) 844-95-49</p>
+                            <p class="header-contact__times">Ежедневно с 9:00 до 20:00</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
