--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
         
     </div>
     <div class="catalog">
+        
         <div class="catalog__container">
             <h2 class="catalog__title title">Для любых событий и дорогих вам людей </h2>
             <div class="catalog__body cards">
+                <span class="decor"></span>
                 <div class="cards__item item-card">
                     <div class="item-card__image">
                         <img class="image" src="https://cdn.pixabay.com/photo/2016/01/11/07/18/cupcakes-1133146_1280.jpg" alt="">
