--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="info-mobile-order__label lbl">
                         Не нашли то что нужно?
                     </div>
-                    <h2 class="info-mobile-order__title">
+                    <h2 class="info-mobile-order__title title">
                         Приготовим заказ любой сложности по фото или эскизу
                     </h2>
                     <p class="info-mobile-order__text">
