--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cakes</title>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,700" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -295,6 +299,133 @@
             </div>
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="reviews__title title title-reviews__container">
+            Почитайте отзывы довольных клиентов
+        </div>
+
+        <div class="reviews__slider slider-reviews">
+            <div class="slider-reviews__wrapper swiper-wrapper">
+                <div class="slider-reviews__slide slide-reviews swiper-slide">
+                    <div class="slide-reviews__container">
+                        <div class="slide-reviews__text text-review">
+                            <h3 class="text-review__title">
+                                «Результат дико порадовал, друзья были в восторге»
+                            </h3>
+                            <p class="text-review__text">
+                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                            </p>
+                            <a href="#" class="text-review__link">
+                                Читать отзыв полностью
+                            </a>
+                        </div>
+                        <div class="slide-reviews__photo photo-review">
+                            <div class="photo-review__image">
+                                <img class="image" src="img/girl-slider1.png" alt="">
+                            </div>
+                            <p class="photo-review__author">
+                                Ирина Ларионова
+                            </p>
+                            <p class="photo-review__city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slider-reviews__slide slide-reviews swiper-slide">
+                    <div class="slide-reviews__container">
+                        <div class="slide-reviews__text text-review">
+                            <h3 class="text-review__title">
+                                «Результат дико порадовал, друзья были в восторге»
+                            </h3>
+                            <p class="text-review__text">
+                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!)
+                            </p>
+                            <a href="#" class="text-review__link">
+                                Читать отзыв полностью
+                            </a>
+                        </div>
+                        <div class="slide-reviews__photo photo-review">
+                            <div class="photo-review__image">
+                                <img class="image" src="img/girl-slider1.png" alt="">
+                            </div>
+                            <p class="photo-review__author">
+                                Ирина Ларионова
+                            </p>
+                            <p class="photo-review__city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slider-reviews__slide slide-reviews swiper-slide">
+                    <div class="slide-reviews__container">
+                        <div class="slide-reviews__text text-review">
+                            <h3 class="text-review__title">
+                                «Результат дико порадовал, друзья были в восторге»
+                            </h3>
+                            <p class="text-review__text">
+                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                            </p>
+                            <a href="#" class="text-review__link">
+                                Читать отзыв полностью
+                            </a>
+                        </div>
+                        <div class="slide-reviews__photo photo-review">
+                            <div class="photo-review__image">
+                                <img class="image" src="img/girl-slider1.png" alt="">
+                            </div>
+                            <p class="photo-review__author">
+                                Ирина Ларионова
+                            </p>
+                            <p class="photo-review__city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slider-reviews__slide slide-reviews swiper-slide">
+                    <div class="slide-reviews__container">
+                        <div class="slide-reviews__text text-review">
+                            <h3 class="text-review__title">
+                                «Результат дико порадовал, друзья были в восторге»
+                            </h3>
+                            <p class="text-review__text">
+                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                            </p>
+                            <a href="#" class="text-review__link">
+                                Читать отзыв полностью
+                            </a>
+                        </div>
+                        <div class="slide-reviews__photo photo-review">
+                            <div class="photo-review__image">
+                                <img class="image" src="img/girl-slider1.png" alt="">
+                            </div>
+                            <p class="photo-review__author">
+                                Ирина Ларионова
+                            </p>
+                            <p class="photo-review__city">
+                                Санкт-Петербург
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slider-reviews__buttons">
+                <div class="slider-reviews-button-prev"></div>
+                <div class="slider-reviews-button-next"></div>
+            </div>
+            
+        </div>
+    </section>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
