Финал верстки блока отзывов со слайдером

--- a/index.html
+++ b/index.html
@@ -301,116 +301,124 @@
     </section>
 
     <section class="reviews">
-        <div class="reviews__title title title-reviews__container">
+        <h2 class="reviews__title title title-reviews__container">
             Почитайте отзывы довольных клиентов
-        </div>
+        </h2>
 
         <div class="reviews__slider slider-reviews">
             <div class="slider-reviews__wrapper swiper-wrapper">
                 <div class="slider-reviews__slide slide-reviews swiper-slide">
                     <div class="slide-reviews__container">
-                        <div class="slide-reviews__text text-review">
-                            <h3 class="text-review__title">
-                                «Результат дико порадовал, друзья были в восторге»
-                            </h3>
-                            <p class="text-review__text">
-                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
-                            </p>
-                            <a href="#" class="text-review__link">
-                                Читать отзыв полностью
-                            </a>
-                        </div>
-                        <div class="slide-reviews__photo photo-review">
-                            <div class="photo-review__image">
-                                <img class="image" src="img/girl-slider1.png" alt="">
+                        <div class="slide-reviews__item">
+                            <div class="slide-reviews__text text-review">
+                                <h3 class="text-review__title">
+                                    «Результат дико порадовал, друзья были в восторге»
+                                </h3>
+                                <p class="text-review__text">
+                                    «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                                </p>
+                                <a href="#" class="text-review__link">
+                                    Читать отзыв полностью
+                                </a>
                             </div>
-                            <p class="photo-review__author">
-                                Ирина Ларионова
-                            </p>
-                            <p class="photo-review__city">
-                                Санкт-Петербург
-                            </p>
+                            <div class="slide-reviews__photo photo-review">
+                                <div class="photo-review__image">
+                                    <img class="image" src="img/girl-slider1.png" alt="">
+                                </div>
+                                <p class="photo-review__author">
+                                    Ирина Ларионова
+                                </p>
+                                <p class="photo-review__city">
+                                    Санкт-Петербург
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="slider-reviews__slide slide-reviews swiper-slide">
                     <div class="slide-reviews__container">
-                        <div class="slide-reviews__text text-review">
-                            <h3 class="text-review__title">
-                                «Результат дико порадовал, друзья были в восторге»
-                            </h3>
-                            <p class="text-review__text">
-                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!)
-                            </p>
-                            <a href="#" class="text-review__link">
-                                Читать отзыв полностью
-                            </a>
-                        </div>
-                        <div class="slide-reviews__photo photo-review">
-                            <div class="photo-review__image">
-                                <img class="image" src="img/girl-slider1.png" alt="">
+                        <div class="slide-reviews__item">
+                            <div class="slide-reviews__text text-review">
+                                <h3 class="text-review__title">
+                                    «Результат дико порадовал, друзья были в восторге»
+                                </h3>
+                                <p class="text-review__text">
+                                    «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                                </p>
+                                <a href="#" class="text-review__link">
+                                    Читать отзыв полностью
+                                </a>
                             </div>
-                            <p class="photo-review__author">
-                                Ирина Ларионова
-                            </p>
-                            <p class="photo-review__city">
-                                Санкт-Петербург
-                            </p>
+                            <div class="slide-reviews__photo photo-review">
+                                <div class="photo-review__image">
+                                    <img class="image" src="img/girl-slider1.png" alt="">
+                                </div>
+                                <p class="photo-review__author">
+                                    Ирина Ларионова
+                                </p>
+                                <p class="photo-review__city">
+                                    Санкт-Петербург
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="slider-reviews__slide slide-reviews swiper-slide">
                     <div class="slide-reviews__container">
-                        <div class="slide-reviews__text text-review">
-                            <h3 class="text-review__title">
-                                «Результат дико порадовал, друзья были в восторге»
-                            </h3>
-                            <p class="text-review__text">
-                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
-                            </p>
-                            <a href="#" class="text-review__link">
-                                Читать отзыв полностью
-                            </a>
-                        </div>
-                        <div class="slide-reviews__photo photo-review">
-                            <div class="photo-review__image">
-                                <img class="image" src="img/girl-slider1.png" alt="">
+                        <div class="slide-reviews__item">
+                            <div class="slide-reviews__text text-review">
+                                <h3 class="text-review__title">
+                                    «Результат дико порадовал, друзья были в восторге»
+                                </h3>
+                                <p class="text-review__text">
+                                    «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                                </p>
+                                <a href="#" class="text-review__link">
+                                    Читать отзыв полностью
+                                </a>
                             </div>
-                            <p class="photo-review__author">
-                                Ирина Ларионова
-                            </p>
-                            <p class="photo-review__city">
-                                Санкт-Петербург
-                            </p>
+                            <div class="slide-reviews__photo photo-review">
+                                <div class="photo-review__image">
+                                    <img class="image" src="img/girl-slider1.png" alt="">
+                                </div>
+                                <p class="photo-review__author">
+                                    Ирина Ларионова
+                                </p>
+                                <p class="photo-review__city">
+                                    Санкт-Петербург
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="slider-reviews__slide slide-reviews swiper-slide">
                     <div class="slide-reviews__container">
-                        <div class="slide-reviews__text text-review">
-                            <h3 class="text-review__title">
-                                «Результат дико порадовал, друзья были в восторге»
-                            </h3>
-                            <p class="text-review__text">
-                                «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
-                            </p>
-                            <a href="#" class="text-review__link">
-                                Читать отзыв полностью
-                            </a>
-                        </div>
-                        <div class="slide-reviews__photo photo-review">
-                            <div class="photo-review__image">
-                                <img class="image" src="img/girl-slider1.png" alt="">
+                        <div class="slide-reviews__item">
+                            <div class="slide-reviews__text text-review">
+                                <h3 class="text-review__title">
+                                    «Результат дико порадовал, друзья были в восторге»
+                                </h3>
+                                <p class="text-review__text">
+                                    «Заказала капкейки, как подарок на новый год. Делать заказ было легко и приятно, ну а результат дико порадовал, друзья были в восторге. И оформление, и на вкус капкейки были просто замечательные. Обязательно буду заказывать еще)) Уже строю планы, чтобы попробовать все начинки. Они восхитительны!) Даже кушать было жалко, такая красота!) 
+                                </p>
+                                <a href="#" class="text-review__link">
+                                    Читать отзыв полностью
+                                </a>
                             </div>
-                            <p class="photo-review__author">
-                                Ирина Ларионова
-                            </p>
-                            <p class="photo-review__city">
-                                Санкт-Петербург
-                            </p>
+                            <div class="slide-reviews__photo photo-review">
+                                <div class="photo-review__image">
+                                    <img class="image" src="img/girl-slider1.png" alt="">
+                                </div>
+                                <p class="photo-review__author">
+                                    Ирина Ларионова
+                                </p>
+                                <p class="photo-review__city">
+                                    Санкт-Петербург
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
