Верстка и адаптив галереи

--- a/index.html
+++ b/index.html
@@ -431,6 +431,47 @@
             
         </div>
     </section>
+
+    <section class="galery">
+        <div class="galery__container">
+            <h2 class="galery__title title">
+                Сделали более 3.000 заказов за 2 года
+            </h2>
+            <p class="galery__text">
+                Посмотрите фото реальных заказов из нашего instagram
+            </p>
+        </div>
+
+        <div class="galery__images">
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-8.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-7.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-6.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-5.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-4.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-3.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-2.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo-1.png" alt="">
+            </div>
+            <div class="galery__image">
+                <img class="image" src="/img/CakesGalery/photo.png" alt="">
+            </div>
+        </div>
+    </section>
     
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
