--- a/index.html
+++ b/index.html
@@ -472,6 +472,46 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <h2 class="footer__title">
+                Чтобы сделать заказ, укажите ваш телефон
+            </h2>
+            <p class="footer__text">
+                Мы перезвоним в течении 15 минут, чтобы уточнить ваши пожелания
+            </p>
+
+            <form action="#" class="footer__form form-order">
+                <label  class="form-order__tel-inner">
+                    
+                    <input type="tel" placeholder="Номер телефона" class="form-order__phone">
+                    <svg class="temp" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="13.999634" height="14.000000" viewBox="0 0 13.9996 14" fill="none">
+                        <defs/>
+                        <path id="Vector" d="M11.77 8.75C11.26 8.25 10.63 8.25 10.13 8.75C9.75 9.13 9.36 9.51 8.98 9.9C8.88 10.01 8.79 10.03 8.67 9.96C8.42 9.82 8.16 9.71 7.92 9.57C6.81 8.87 5.87 7.97 5.05 6.95C4.64 6.45 4.28 5.91 4.02 5.31C3.97 5.19 3.98 5.1 4.08 5.01C4.46 4.63 4.84 4.25 5.21 3.87C5.74 3.35 5.74 2.73 5.21 2.19C4.91 1.89 4.61 1.6 4.31 1.29C4 0.98 3.7 0.67 3.38 0.36C2.88 -0.13 2.25 -0.13 1.74 0.37C1.36 0.75 0.99 1.14 0.59 1.51C0.23 1.86 0.04 2.28 0.01 2.77C-0.05 3.57 0.14 4.33 0.42 5.07C0.99 6.6 1.85 7.95 2.9 9.2C4.31 10.88 6 12.21 7.98 13.17C8.87 13.6 9.79 13.93 10.79 13.99C11.48 14.03 12.08 13.85 12.56 13.32C12.89 12.95 13.26 12.61 13.61 12.26C14.12 11.74 14.12 11.11 13.61 10.59C13 9.98 12.38 9.37 11.77 8.75Z" fill="ddd929AA2" fill-opacity="1.000000" fill-rule="evenodd"/>
+                    </svg>
+                </label>
+                <button class="form-order__button btn" type="submit">Сделать заказ</button>
+                <label class="form-order__agreement">
+                    <input checked type="checkbox" name="test1">
+                    <span class="form-order__agreement-text">
+                        Нажамая на кнопку, вы соглашаетесь с
+                        <a href="#" class="form-order__agreement-link">
+                            условиями обработки персональных данных
+                        </a>
+                    </span>
+                    <input type="checkbox" name="test2">
+                </label>
+            </form>
+        </div>
+
+        <div class="footer__links">
+            <a href="#" class="footer__link">Согласие на обработку данных</a>
+            <a href="#" class="footer__link">Служба поддержки</a>
+            <a href="#" class="footer__link">Политика конфиденциальности</a>
+            <a href="#" class="footer__link">© nazvaniesaita.ru, 2054 | Название компании или ИП ОГРН 0000000000000</a>
+        </div>
+    </footer>
     
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
