--- a/index.html
+++ b/index.html
@@ -492,15 +492,15 @@
                     </svg>
                 </label>
                 <button class="form-order__button btn" type="submit">Сделать заказ</button>
-                <label class="form-order__agreement">
-                    <input checked type="checkbox" name="test1">
-                    <span class="form-order__agreement-text">
+                <label class="form-order__agreement --checked">
+                    <span></span>
+                    <input checked type="checkbox" name="agree">
+                    <div class="form-order__agreement-text">
                         Нажамая на кнопку, вы соглашаетесь с
                         <a href="#" class="form-order__agreement-link">
                             условиями обработки персональных данных
                         </a>
-                    </span>
-                    <input type="checkbox" name="test2">
+                    </div>
                 </label>
             </form>
         </div>
