--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@
                     </a>
                 </div>
             </form>
+            <span></span> <!--Для декора-->
         </div>
 
         <div class="footer__links">
