--- a/index.html
+++ b/index.html
@@ -444,31 +444,31 @@
 
         <div class="galery__images">
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-8.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-8.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-7.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-7.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-6.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-6.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-5.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-5.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-4.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-4.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-3.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-3.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-2.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-2.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo-1.png" alt="">
+                <img class="image" src="img/CakesGalery/photo-1.png" alt="">
             </div>
             <div class="galery__image">
-                <img class="image" src="/img/CakesGalery/photo.png" alt="">
+                <img class="image" src="img/CakesGalery/photo.png" alt="">
             </div>
         </div>
     </section>
@@ -516,6 +516,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
